--- a/index.html
+++ b/index.html
@@ -5,62 +5,90 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Dicky Sanjaya</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="apple-touch-icon" sizes="57x57" href="assets/css/images/icon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="assets/css/images/icon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="assets/css/images/icon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="assets/css/images/icon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="assets/css/images/icon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="assets/css/images/icon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="assets/css/images/icon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="assets/css/images/icon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/icon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="assets/css/images/icon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="assets/css/images/icon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="assets/css/images/icon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="assets/css/images/icon/favicon-16x16.png">
-		<link rel="manifest" href="assets/css/images/icon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="assets/css/images/icon/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
-	</head>
-	<body class="is-preload">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<!-- <div id="overlay"></div> -->
-			<div id="main">
 
-				<!-- Header -->
-					<header id="header">
-						<h1>Muchammad Dicky Sanjaya</h1>
-						<p>Computer Engineering Student</p>
-						<nav>
-							<ul>
-								<li><a href="https://twitter.com/Dickys11" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.instagram.com/dickys.11/" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/dickys11" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/dicky-sanjaya/" class="fab fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:dickyssanjaya@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-						</nav>
-					</header>
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175463455-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-				<!-- Footer -->
-					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Photos: <a href="https://unsplash.com/photos/KT3WlrL_bsg">Unsplash</a>.</span>
-					</footer>
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
 
-			</div>
+		gtag('config', 'UA-175463455-1');
+	</script>
+	<title>Dicky Sanjaya</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="apple-touch-icon" sizes="57x57" href="assets/css/images/icon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/css/images/icon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/css/images/icon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/css/images/icon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/css/images/icon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/css/images/icon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/css/images/icon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/css/images/icon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/css/images/icon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="assets/css/images/icon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/css/images/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/css/images/icon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/css/images/icon/favicon-16x16.png">
+	<link rel="manifest" href="assets/css/images/icon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="assets/css/images/icon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+</head>
+
+<body class="is-preload">
+	<div id="wrapper">
+		<div id="bg"></div>
+		<!-- <div id="overlay"></div> -->
+		<div id="main">
+
+			<!-- Header -->
+			<header id="header">
+				<h1>Muchammad Dicky Sanjaya</h1>
+				<p>Computer Engineering Student</p>
+				<nav>
+					<ul>
+						<li><a href="https://twitter.com/Dickys11" class="icon brands fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/dickys.11/" class="fab fa-instagram"><span
+									class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/dickys11" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/dicky-sanjaya/" class="fab fa-linkedin-in"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:dickyssanjaya@gmail.com" class="icon solid fa-envelope"><span
+									class="label">Email</span></a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Photos: <a
+						href="https://unsplash.com/photos/KT3WlrL_bsg">Unsplash</a>.</span>
+			</footer>
+
 		</div>
-		<script>
-			window.onload = function() { document.body.classList.remove('is-preload'); }
-			window.ontouchmove = function() { return false; }
-			window.onorientationchange = function() { document.body.scrollTop = 0; }
-		</script>
-	</body>
+	</div>
+	<script>
+		window.onload = function () {
+			document.body.classList.remove('is-preload');
+		}
+		window.ontouchmove = function () {
+			return false;
+		}
+		window.onorientationchange = function () {
+			document.body.scrollTop = 0;
+		}
+	</script>
+</body>
+
 </html>
